pipeline change to compile project dir

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -120,5 +120,6 @@ jobs:
 
       - name: Build and Test Rust Code
         run: |
+          cd waka-waka-waku
           cargo build --release
           cargo run --release
