--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -122,5 +122,7 @@ jobs:
         run: |
           echo "Value of GITHUB_WORKSPACE: $GITHUB_WORKSPACE"
           cd $GITHUB_WORKSPACE
+          echo "Current directory: $(pwd)"
+          ls -al
           cargo build --release
           cargo run --release
