--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -13,6 +13,9 @@ jobs:
       - name: Set up Docker
         uses: docker/setup-buildx-action@v2
 
+      - name: Clone repository
+        uses: actions/checkout@v2
+
       - name: Stop and Remove Previous Containers (if any)
         run: |
           docker stop waku-node1 || true
