--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -125,5 +125,5 @@ jobs:
         run: |
           cd $GITHUB_WORKSPACE
           cargo build --release
-          cargo test
+          cargo test --test integration_tests -- --test-threads=1
 
