--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,5 +11,5 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1.38.0", features = ["full"] }  # Add tokio with full features
 urlencoding = "2.1.3"  # Add urlencoding crate
-
+serial_test = "3.1.1"
 
