added manual dispactch of action pipeline

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -4,11 +4,11 @@ on:
   push:
     branches:
       - main
+  workflow_dispatch:
 
 jobs:
   start-waku-nodes:
     runs-on: ubuntu-latest
-
     steps:
       - name: Set up Docker
         uses: docker/setup-buildx-action@v2
@@ -24,7 +24,7 @@ jobs:
           docker rm waku-node2 || true
 
       - name: Create Docker Network
-        run: docker network create --driver bridge --subnet 172.18.0.0/16 --gateway 172.18.0.1 waku
+        run: docker network create --driver bridge --subnet 172.18.0.0/16 --gateway 172.18.0.1 waku || true
 
       - name: Start Waku Node 1
         run: |
@@ -126,4 +126,3 @@ jobs:
           cd $GITHUB_WORKSPACE
           cargo build --release
           cargo test --test integration_tests -- --test-threads=1
-
